--- a/index.html
+++ b/index.html
@@ -1,6 +1,6 @@
 <script>
 	var URLparam = location.search.split('url=')[1];
-	document.domain = "arjunmitrareddy.github.io";
+	document.domain = "maps.google.com";
 	document.write('<iframe id="myFrame" style="position:fixed; top:0px; left:0px; bottom:0px; width:100%; height:100%; border:none; margin:0; padding:0; overflow:hidden;" src='+URLparam+'><\/iframe>');
 	setTimeout(function() {
 		var iframe = document.getElementById('myFrame');
