--- a/index.html
+++ b/index.html
@@ -1,15 +1,106 @@
-<script>
-	var URLparam = location.search.split('url=')[1];
-	document.domain = "maps.google.com";
-	document.write('<iframe id="myFrame" style="position:fixed; top:0px; left:0px; bottom:0px; width:100%; height:100%; border:none; margin:0; padding:0; overflow:hidden;" src='+URLparam+'><\/iframe>');
-	setTimeout(function() {
-		var iframe = document.getElementById('myFrame');
-		var innerDoc = iframe.contentDocument || iframe.contentWindow.document;
-		var el = innerDoc.getElementByClassName("google-maps-link");
-		if (el.onclick) {
-   el.onclick();
-} else if (el.click) {
-   el.click();
+
+<!DOCTYPE html>
+
+<html>
+
+  <head>
+
+    <meta charset="utf-8">
+
+    <title>Street View containers</title>
+
+    <style>
+
+      html, body, #map-canvas {
+
+        height: 100%;
+
+        margin: 0px;
+
+        padding: 0px
+
+      }
+
+    </style>
+
+    <script src="https://maps.googleapis.com/maps/api/js?key=AIzaSyAxIxOaL4nT-cfR0dMDfDOX7_xwFTAFw0U"></script>
+
+    <script>
+
+function initialize() {
+
+  var params = getQueryParams();
+
+  var bryantPark = new google.maps.LatLng(params.lat, params.lon);
+
+  var panoramaOptions = {
+
+    position: bryantPark,
+
+    pov: {
+
+      heading: 165,
+
+      pitch: 0
+
+    },
+
+    zoom: 1
+
+  };
+
+  var myPano = new google.maps.StreetViewPanorama(
+
+      document.getElementById('map-canvas'),
+
+      panoramaOptions);
+
+  myPano.setVisible(true);
+
 }
-	}, 1000);
-</script>
+
+
+
+function getQueryParams(){
+
+    var params = {};
+
+    var query = window.location.search.substring(1);
+
+    var vars = query.split("&");
+
+    for (var i=0;i<vars.length;i++) {
+
+        var pair = vars[i].split("=");
+
+        if(pair.length == 2)
+
+        {
+
+            params[pair[0]] = pair[1];
+
+        }
+
+     }
+
+     return params;
+
+}
+
+
+
+google.maps.event.addDomListener(window, 'load', initialize);
+
+
+
+    </script>
+
+  </head>
+
+  <body>
+
+    <div id="map-canvas"></div>
+
+  </body>
+
+</html>
