--- a/index.html
+++ b/index.html
@@ -1,106 +1,80 @@
-
 <!DOCTYPE html>
-
 <html>
-
   <head>
-
+    <meta name="viewport" content="initial-scale=1.0, user-scalable=no">
     <meta charset="utf-8">
-
-    <title>Street View containers</title>
-
+    <title>Directions service</title>
     <style>
-
       html, body, #map-canvas {
-
         height: 100%;
-
         margin: 0px;
-
         padding: 0px
-
       }
-
+      #panel {
+        position: absolute;
+        top: 5px;
+        left: 50%;
+        margin-left: -180px;
+        z-index: 5;
+        background-color: #fff;
+        padding: 5px;
+        border: 1px solid #999;
+      }
     </style>
-
     <script src="https://maps.googleapis.com/maps/api/js?key=AIzaSyAxIxOaL4nT-cfR0dMDfDOX7_xwFTAFw0U"></script>
-
     <script>
 
+var directionsDisplay;
+var directionsService = new google.maps.DirectionsService();
+var map;
+
 function initialize() {
-
-  var params = getQueryParams();
-
-  var bryantPark = new google.maps.LatLng(params.lat, params.lon);
-
-  var panoramaOptions = {
-
-    position: bryantPark,
-
-    pov: {
-
-      heading: 165,
-
-      pitch: 0
-
-    },
-
-    zoom: 1
-
+  directionsDisplay = new google.maps.DirectionsRenderer();
+  var chicago = new google.maps.LatLng(41.850033, -87.6500523);
+  var mapOptions = {
+    zoom:7
   };
-
-  var myPano = new google.maps.StreetViewPanorama(
-
-      document.getElementById('map-canvas'),
-
-      panoramaOptions);
-
-  myPano.setVisible(true);
-
+  map = new google.maps.Map(document.getElementById('map-canvas'), mapOptions);
+  directionsDisplay.setMap(map);
+  calcRoute();
 }
 
-
+function calcRoute() {
+  var params = getQueryParams();
+  var start = new google.maps.LatLng(params.OrgLat, params.OrgLon);
+  var end = new google.maps.LatLng(params.DestLat, params.DestLon);
+  var request = {
+      origin:start,
+      destination:end,
+      travelMode: google.maps.TravelMode.DRIVING
+  };
+  directionsService.route(request, function(response, status) {
+    if (status == google.maps.DirectionsStatus.OK) {
+      directionsDisplay.setDirections(response);
+    }
+  });
+}
 
 function getQueryParams(){
-
     var params = {};
-
     var query = window.location.search.substring(1);
-
     var vars = query.split("&");
-
     for (var i=0;i<vars.length;i++) {
-
         var pair = vars[i].split("=");
-
         if(pair.length == 2)
-
         {
-
             params[pair[0]] = pair[1];
-
         }
-
      }
-
      return params;
-
 }
-
-
 
 google.maps.event.addDomListener(window, 'load', initialize);
 
 
-
     </script>
-
   </head>
-
   <body>
-
     <div id="map-canvas"></div>
-
   </body>
-
 </html>
