--- a/index.html
+++ b/index.html
@@ -32,7 +32,11 @@ function initialize() {
   directionsDisplay = new google.maps.DirectionsRenderer();
   var chicago = new google.maps.LatLng(41.850033, -87.6500523);
   var mapOptions = {
-    zoom:7
+    zoom: 8,
+            center:latlng,
+            //backgroundColor: '#ff0000',
+            mapTypeId: google.maps.MapTypeId.ROADMAP,
+            //imageDefaultUI: true
   };
   map = new google.maps.Map(document.getElementById('map-canvas'), mapOptions);
   directionsDisplay.setMap(map);
