--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
        <meta http-equiv="content-type" content="text/html; charset=UTF-8"/> 
        <title>Google Maps API v3 Directions Example</title> 
        <script type="text/javascript" 
-               src="http://maps.google.com/maps/api/js?sensor=false?key=AIzaSyAxIxOaL4nT-cfR0dMDfDOX7_xwFTAFw0U"></script>
+               src="https://maps.google.com/maps/api/js?sensor=false?key=AIzaSyAxIxOaL4nT-cfR0dMDfDOX7_xwFTAFw0U"></script>
     </head> 
     <body style="font-family: Arial; font-size: 12px;"> 
        <div style="width: 600px;">
